fix scrollbar style

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,7 +57,9 @@ body {
       @apply !bg-[#202025] !text-[#555555] cursor-not-allowed;
     }
   }
-
+  /* .scroll-aqua{
+    @apply 
+  } */
   .btn-primary-aqua {
     @apply py-6 px-14 rounded-none !bg-aqua1 !text-black1 font-extrabold text-20 leading-6 border-0 cursor-pointer duration-500 ease-in-out;
 
@@ -362,7 +364,14 @@ body {
   animation: gradientAnimation 2s ease infinite;
   border-radius: 10px;
 }
-
+@layer utilities {
+  .scrollbar-gradient::-webkit-scrollbar {
+    width: 5px;
+  }
+  .scrollbar-gradient::-webkit-scrollbar-thumb {
+    @apply bg-aqua1 rounded-lg ;
+  }
+}
 @keyframes gradientAnimation {
   0% {
     background-position: 0% 50%;
